fixed the overlap problem

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,7 +34,7 @@ body{
     padding-top:70px;
 }
 
-.form-wrapper{
+/* .form-wrapper{
     position: relative;
     z-index: -1;
-}
+} */
